[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubecuro"
version = "0.1.0"
description = "Enterprise-grade Kubernetes YAML healing and auditing tool."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Nishar A Sunkesala", email = "fixmyk8s@gmail.com"}
]
keywords = ["kubernetes", "yaml", "devops", "sre", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

# External Dependencies
dependencies = [
    "ruamel.yaml>=0.17.21",
    "rich>=12.0.0",  # For the beautiful CLI output we'll build next
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
]

# This is the "Magic" part: It creates a 'kubecuro' command in your terminal
[project.scripts]
kubecuro = "kubecuro.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kubecuro = ["assets/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/nisharas/kubecuro"
Issues = "https://github.com/nisharas/kubecuro/issues"
Repository = "https://github.com/nisharas/kubecuro.git"

